[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name       	= "user_script_wasm"
version    	= "0.1.0"
description	= "Demo of using wasm module generated with Rust in a JS user script loaded in Violentmonkey"
authors    	= ["es"]
categories 	= ["wasm","user script"]
readme     	= "README.md"
license    	= "MIT"
edition    	= "2021"

[workspace]

[lib]
crate-type 	= ["cdylib"]

[dependencies]
wasm-bindgen            	= "0.2.74"
console_error_panic_hook	= "0.1.6"
web-sys                 	= {version="0.3.64",features=['console','EventTarget',
  'Window',
  'Document',
  'Element',
  'Node',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlTextAreaElement',
  'HtmlParagraphElement',
  'HtmlButtonElement',
  'HtmlElement',
  'KeyboardEvent',
  'MouseEvent',
  'console',
]}
gloo  	= "0.9.0"
# gloo	= {version="0.9.0",features=['console','events']}

log      	= "0.4"
stderrlog	= "0.5"
anyhow   	= "1.0"
faccess  	= "0.2"
js-sys = "0.3.64"

[profile.release]
# opt        	for       	size
strip        	= true    	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= "z"     	# |3|     optimize for size
lto          	= true    	# |false| Sets link-time optimization.
codegen-units	= 1       	# |16|    reduce parallel code generation
panic        	= "unwind"	# abort|unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind
